# uiget

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: builder.rs  cli.rs  config.rs  installer.rs  main.rs  package_manager.rs  registry.rs
