[package]
name = "uiget"
version = "0.1.0"
edition = "2021"
description = "CLI tool for downloading shadcn components from multiple registries"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
dirs = "6.0"
url = "2.4"
fs_extra = "1.3"
colored = "3.0"
dialoguer = "0.12"
sha2 = "0.10"
walkdir = "2.5"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.21"

[[bin]]
name = "uiget"
path = "src/main.rs"
